--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Swap our for actual link-->
-    <link rel="canonical" href="https://www.company.com/about">
+    <link rel="canonical" href="https://www.jmdynamic.com">
 
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -20,6 +20,7 @@
     <meta property="og:image:secure_url" content="/images/social.jpg"/>
 
     <!--Favicons-->
+    <!--Use https://realfavicongenerator.net/ to generate and download your favicons-->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v1">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -28,7 +29,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- Preload -->
-    <link rel="preload" as="image" href="/images/cabinets2-m.jpg">
+    <link rel="preload" as="image" href="/images/landing-m.webp">
     <link rel="preload" as="font" type="font/woff2" href="fonts/roboto-v29-latin-regular.woff2" crossorigin>
     <link rel="preload" as="font" type="font/woff2" href="fonts/roboto-v29-latin-700.woff2" crossorigin>
 
@@ -36,9 +37,15 @@
     <link rel="stylesheet" href="/css/about.css">
     <link rel="stylesheet" href="/css/dark.css">
 
-    <!--Put analytics tag here at the bottom to prevent it from render blocking-->
+    <!--Defer loading the whole page css-->
+    <link rel="stylesheet" href="/css/local.css" media="print" onload="this.media='all'; this.onload=null;">
 
-    <title>Company Name | About Us | Town and State</title>
+    <!--If the user has javascript disbaled, load this stylesheet-->
+    <noscript>
+        <link rel="stylesheet" href="/css/local.css">
+    </noscript>
+
+    <title>JM Dynamic | Skills for Life | CITYNAME, NC</title>
 </head>
 <body>
     <!--Screen reader skip main nav-->
@@ -59,10 +66,10 @@
             <!--Logo - Get SVGs if you can.  I use fiverr to get png's turned into SVGs. Highly recommend it, worth the $20 - get a light and dark version-->
             <a class="logo" aria-label="click to go to home page" href="/index.html">
                 <!--Light Colored Logo, remove .dark image tag and the .light class if you don't have a dark and light version -->
-                <img class="light" aria-hidden="true" src="/images/logo-light.png" decoding="async" alt="logo" width="221" height="66">
+                <img class="light" aria-hidden="true" src="/images/logo.png" decoding="async" alt="logo" width="221" height="66">
 
                 <!--Dark Colored Logo-->
-                <img class="dark" aria-hidden="true" src="/images/logo-blue.png" decoding="async" loading="lazy" alt="logo" width="221" height="66">
+                <img class="dark" aria-hidden="true" src="/images/logo.png" decoding="async" loading="lazy" alt="logo" width="221" height="66">
             </a>
 
             <!--Main Nav-->
@@ -70,8 +77,8 @@
                 <ul>
                     <li><a href="/index.html">Home</a></li>
                     <li><a class="active" href="/about.html">About Us</a></li>
-                    <li><a href="/projects.html">Projects</a></li>
-                    <li><a href="/reviews.html">Reviews</a></li>
+                    <li><a href="/schedule.html">Schedule</a></li>
+                    <li><a href="/photos.html">Photos</a></li>
                     <li><a href="/contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -90,8 +97,6 @@
         </div>
     </div>
 
-    <main id="main">
-
         <!-- ============================================ -->
         <!--                    LANDING                   -->
         <!-- ============================================ -->
@@ -99,9 +104,9 @@
         <section id="int-hero">
             <h1 id="home-h">About Us</h1>
             <picture>
-                <source media="(max-width: 600px)" srcset="/images/cabinets2-m.jpg">
-                <source media="(min-width: 601px)" srcset="/images/cabinets2.jpg">
-                <img aria-hidden="true" decoding="async" src="/images/cabinets2.jpg" alt="cabinets" width="400" height="662">
+                <source media="(max-width: 600px)" srcset="/images/target-m.jpg">
+                <source media="(min-width: 601px)" srcset="/images/target.jpg">
+                <img aria-hidden="true" decoding="async" src="/images/target.jpg" alt="cabinets" width="400" height="662">
             </picture>
         </section>
 
@@ -144,13 +149,57 @@
                      <p>
                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium saepe laborum nam consequuntur porro inventore odio? Quod autem alias ratione cum reiciendis qui quaerat, sequi voluptatum voluptatibus, iusto itaque sed ullam. Quis, maiores corrupti. Rerum quo laudantium vero magnam tempora!
                      </p>
-                     <a class="button-solid" href="/conttact.html">Get Free Quote</a>
+                     <a class="button-solid" href="/schedule.html">Check Our Schedule</a>
                 </div>
                 <picture class="image-box">
-                     <source media="(max-width: 600px)" srcset="/images/cabinets2-m.jpg">
-                     <source media="(min-width: 601px)" srcset="/images/cabinets2.jpg">
-                     <img aria-hidden="true" loading="lazy" decoding="async" src="/images/cabinets2.jpg" alt="cabinets" width="400" height="662">
+                     <source media="(max-width: 600px)" srcset="/images/people.jpg">
+                     <source media="(min-width: 601px)" srcset="/images/people.jpg">
+                     <img aria-hidden="true" loading="lazy" decoding="async" src="/images/people.jpg" alt="cabinets" width="400" height="662">
                  </picture>
+            </div>
+       </section>
+
+       <!-- ============================================ -->
+        <!--                   About                      -->
+        <!-- ============================================ -->
+
+        <section id="sidebyside" class="sidebyside">
+            <div class="container">
+                <div class="content">
+                    <h2 class="title">FAQs</h2>
+                     <p>
+                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam debitis dolor consectetur dolorem inventore modi tenetur ex odit, amet beatae ad, doloribus tempora quae ab nulla minus temporibus at veritatis!
+                     </p>
+                     <p>
+                         <strong>List if you need it:</strong>
+                      </p>
+                     <ul>
+                        <li>
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
+                            <span>List item about something</span>
+                        </li>
+                        <li>
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
+                            <span>List item about something</span>
+                        </li>
+                        <li>
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
+                            <span>List item about something</span>
+                        </li>
+                        <li>
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
+                            <span>List item about something</span>
+                        </li>
+                        <li>
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
+                            <span>List item about something</span>
+                        </li>
+                    </ul>
+                     <p>
+                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium saepe laborum nam consequuntur porro inventore odio? Quod autem alias ratione cum reiciendis qui quaerat, sequi voluptatum voluptatibus, iusto itaque sed ullam. Quis, maiores corrupti. Rerum quo laudantium vero magnam tempora!
+                     </p>
+                     <a class="button-solid" href="/contact.html">Contact Us</a>
+                </div>
             </div>
        </section>
 
@@ -162,30 +211,26 @@
             <div class="container">
                 <h2 class="title">Get It Done <br> With Us Today</h2>
                 <p>
-                    Say something catchy, informative, and encouraging to click the button to go to the contact page.  I like to add these to the bottom of all pages.
+                    Say something catchy, informative, and encouraging to click the button to go to the schedule page. This is where you convert a sale.
                 </p>
-                <a href="/contact.html" class="button-solid">Free Estimate</a>
+                <a href="/schedule.html" class="button-solid">Schedule Training Now</a>
             </div>
             <picture>
-                <source media="(max-width: 600px)" srcset="/images/cabinets2-m.webp">
-                <source media="(min-width: 601px)" srcset="/images/cabinets2.jpg">
-                <img aria-hidden="true" loading="lazy" decoding="async" src="/images/cabinets2.jpg" alt="kitchen cabinets" width="1920" height="1280">
+                <source media="(max-width: 600px)" srcset="/images/bg-3.webp">
+                <source media="(min-width: 601px)" srcset="/images/bg-3.jpg">
+                <img aria-hidden="true" loading="lazy" decoding="async" src="/images/bg-3.jpg" alt="military guy with rifle" width="1920" height="1280">
              </picture>
         </section>
-
     </main>
 
     <!-- ============================================ -->
-    <!--                   Footer                     -->
+    <!--                     FOOTER                   -->
     <!-- ============================================ -->
 
     <footer id="footer">
         <div class="container">
             <div class="left-section">
-                <a class="logo" href="/index.html"><img loading="lazy" decoding="async" src="/images/logo-light.png" alt="logo" width="264" height="78"></a>
-                <p>
-                    Extra content if you need it, if not you can delete this whole p tag. I usually do.
-                </p>
+                <a class="logo" href="/index.html"><img loading="lazy" decoding="async" src="/images/logo.png" alt="logo" ></a>
             </div>
             <div class="right-section">
                 <div class="lists">
@@ -193,20 +238,19 @@
                         <li><h2>Information</h2></li>
                         <li><a href="/index.html">Home</a></li>
                         <li><a href="/about.html">About Us</a></li>
-                        <li><a href="/projects.html">Projects</a></li>
-                        <li><a href="/testimonials.html">Reviews</a></li>
+                        <li><a href="/schedule.html">Schedule</a></li>
+                        <li><a href="/photos.html">Photos</a></li>
                         <li><a href="/contact.html">Contact</a></li>
                     </ul>
                     <ul>
                         <li><h2>Services</h2></li>
-                        <li>Service1</li>
-                        <li>Service2</li>
-                        <li>Service4</li>
-                        <li>Service5</li>
+                        <li>Training</li>
+                        <li>Licensing</li>
+                        <li>Consulting</li>
                     </ul>
                     <ul>
                         <li><h2>Contact</h2></li>
-                        <li><a href="/contact.html">First Address Line<br>Denver CO 80206</a></li>
+                        <li><a href="/contact.html">First Address Line<br>Raleigh NC 77777</a></li>
                         <li><a href="tel:555-779-4407">T: (555) 779-4407</a></li>
                         <li><a href="mailto:email@email.com">Click to Email</a></li>
                     </ul>
@@ -215,10 +259,11 @@
         </div>
 
         <div class="credit">
-            <span>Designed and Hand Coded by</span>
-            <a href="" target="_blank" rel="noopener">Your Company Name</a>
-            <span class="copyright"> Copyright 2021 - Present</span></div>
+            <span>Designed by</span>
+            <a href="https://www.asteriawebdesign.com" target="_blank" rel="noopener">Asteria Web Design</a>
+            <span class="copyright"> Copyright 2023 - Present</span></div>
     </footer>
+
 
     <script defer src="/nav.js"></script>
     <script defer src="/dark.js"></script>
