--- a/contact.html
+++ b/contact.html
@@ -59,10 +59,10 @@
             <!--Logo - Get SVGs if you can.  I use fiverr to get png's turned into SVGs. Highly recommend it, worth the $20 - get a light and dark version-->
             <a class="logo" aria-label="click to go to home page" href="/index.html">
                 <!--Light Colored Logo, remove .dark image tag and the .light class if you don't have a dark and light version -->
-                <img class="light" aria-hidden="true" src="/images/logo-light.png" decoding="async" alt="logo" width="221" height="66">
+                <img class="light" aria-hidden="true" src="/images/logo.png" decoding="async" alt="logo" width="221" height="66">
 
                 <!--Dark Colored Logo-->
-                <img class="dark" aria-hidden="true" src="/images/logo-blue.png" decoding="async" loading="lazy" alt="logo" width="221" height="66">
+                <img class="dark" aria-hidden="true" src="/images/logo.png" decoding="async" loading="lazy" alt="logo" width="221" height="66">
             </a>
 
             <!--Main Nav-->
@@ -70,8 +70,8 @@
                 <ul>
                     <li><a href="/index.html">Home</a></li>
                     <li><a href="/about.html">About Us</a></li>
-                    <li><a href="/projects.html">Projects</a></li>
-                    <li><a href="/reviews.html">Reviews</a></li>
+                    <li><a href="/schedule.html">Schedule</a></li>
+                    <li><a href="/photos.html">Photos</a></li>
                     <li><a class="active" href="/contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -99,9 +99,9 @@
         <section id="int-hero">
             <h1 id="home-h">Contact Us</h1>
             <picture>
-                <source media="(max-width: 600px)" srcset="/images/cabinets2-m.jpg">
-                <source media="(min-width: 601px)" srcset="/images/cabinets2.jpg">
-                <img aria-hidden="true" loading="lazy" decoding="async" src="/images/cabinets2.jpg" alt="" width="400" height="662">
+                <source media="(max-width: 600px)" srcset="/images/bg-3-m.jpg">
+                <source media="(min-width: 601px)" srcset="/images/bg-3.jpg">
+                <img aria-hidden="true" loading="lazy" decoding="async" src="/images/bg-3.jpg" alt="" width="400" height="662">
             </picture>
         </section>
 
@@ -154,7 +154,7 @@
             <div class="contact-right">
                 <div class="info-group">
                     <span class="heading">Location</span>
-                    <span class="info">Denver, CO</span>
+                    <span class="info">Raleigh, NC</span>
                 </div>
                 <div class="info-group">
                     <span class="heading">Phone</span>
@@ -174,16 +174,13 @@
     </main>
 
     <!-- ============================================ -->
-    <!--                   Footer                     -->
+    <!--                     FOOTER                   -->
     <!-- ============================================ -->
 
     <footer id="footer">
         <div class="container">
             <div class="left-section">
-                <a class="logo" href="/index.html"><img loading="lazy" decoding="async" src="/images/logo-light.png" alt="logo" width="264" height="78"></a>
-                <p>
-                    Extra content if you need it, if not you can delete this whole p tag. I usually do.
-                </p>
+                <a class="logo" href="/index.html"><img loading="lazy" decoding="async" src="/images/logo.png" alt="logo" ></a>
             </div>
             <div class="right-section">
                 <div class="lists">
@@ -191,20 +188,19 @@
                         <li><h2>Information</h2></li>
                         <li><a href="/index.html">Home</a></li>
                         <li><a href="/about.html">About Us</a></li>
-                        <li><a href="/projects.html">Projects</a></li>
-                        <li><a href="/testimonials.html">Reviews</a></li>
+                        <li><a href="/schedule.html">Schedule</a></li>
+                        <li><a href="/photos.html">Photos</a></li>
                         <li><a href="/contact.html">Contact</a></li>
                     </ul>
                     <ul>
                         <li><h2>Services</h2></li>
-                        <li>Service1</li>
-                        <li>Service2</li>
-                        <li>Service4</li>
-                        <li>Service5</li>
+                        <li>Training</li>
+                        <li>Licensing</li>
+                        <li>Consulting</li>
                     </ul>
                     <ul>
                         <li><h2>Contact</h2></li>
-                        <li><a href="/contact.html">First Address Line<br>Denver CO 80206</a></li>
+                        <li><a href="/contact.html">First Address Line<br>Raleigh NC 77777</a></li>
                         <li><a href="tel:555-779-4407">T: (555) 779-4407</a></li>
                         <li><a href="mailto:email@email.com">Click to Email</a></li>
                     </ul>
@@ -213,10 +209,11 @@
         </div>
 
         <div class="credit">
-            <span>Designed and Hand Coded by</span>
-            <a href="" target="_blank" rel="noopener">Your Company Name</a>
-            <span class="copyright"> Copyright 2021 - Present</span></div>
+            <span>Designed by</span>
+            <a href="https://www.asteriawebdesign.com" target="_blank" rel="noopener">Asteria Web Design</a>
+            <span class="copyright"> Copyright 2023 - Present</span></div>
     </footer>
+
 
     <script defer src="/nav.js"></script>
     <script defer src="/dark.js"></script>
