--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Swap our for actual link-->
-    <link rel="canonical" href="https://www.company.com">
+    <link rel="canonical" href="https://www.jmdynamic.com">
 
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -45,7 +45,7 @@
         <link rel="stylesheet" href="/css/local.css">
     </noscript>
 
-    <title>Company Name | What They Do | Town and State</title>
+    <title>JM Dynamic | Skills for Life | CITYNAME, NC</title>
 </head>
 <body>
     <!--Screen reader skip main nav-->
@@ -66,10 +66,10 @@
             <!--Logo - Get SVGs if you can.  I use fiverr to get png's turned into SVGs. Highly recommend it, worth the $20 - get a light and dark version-->
             <a class="logo" aria-label="click to go to home page" href="/index.html">
                 <!--Light Colored Logo, remove .dark image tag and the .light class if you don't have a dark and light version -->
-                <img class="light" aria-hidden="true" src="/images/logo-light.png" decoding="async" alt="logo" width="221" height="66">
+                <img class="light" aria-hidden="true" src="/images/logo.png" decoding="async" alt="logo" width="221" height="66">
 
                 <!--Dark Colored Logo-->
-                <img class="dark" aria-hidden="true" src="/images/logo-blue.png" decoding="async" loading="lazy" alt="logo" width="221" height="66">
+                <img class="dark" aria-hidden="true" src="/images/logo.png" decoding="async" loading="lazy" alt="logo" width="221" height="66">
             </a>
 
             <!--Main Nav-->
@@ -77,8 +77,8 @@
                 <ul>
                     <li><a class="active" href="/index.html">Home</a></li>
                     <li><a href="/about.html">About Us</a></li>
-                    <li><a href="/projects.html">Projects</a></li>
-                    <li><a href="/reviews.html">Reviews</a></li>
+                    <li><a href="/schedule.html">Schedule</a></li>
+                    <li><a href="/photos.html">Photos</a></li>
                     <li><a href="/contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -105,19 +105,19 @@
         <section id="hero">
             <div class="hero-content">
                 <div class="heroText">
-                    <h1 id="home-h">Main Keywords of What They Do, And Location If Needed</h1>
+                    <h1 id="home-h">Real Skills for Real Life.</h1>
                     <p>
-                        Talk about the other services they do with keywords and locations where they serve.  Try to make this 2-3 lines tall.
+                        We provide training to level up your life. Concealed carry, tactical maneuvering, and more.
                     </p>
-                    <a class="button-solid" href="/contact.html" target="_blank" rel="noopener">
-                        Main Call To Action
+                    <a class="button-solid" href="/schedule.html" target="_blank" rel="noopener">
+                        Schedule Training
                     </a>
                 </div>
             </div>
             <picture>
                 <source media="(max-width: 600px)" srcset="/images/landing-m.webp">
-                <source media="(min-width: 601px)" srcset="/images/landing.jpg">
-                <img aria-hidden="true" decoding="async" src="/images/landing.jpg" alt="new home" width="275" height="132">
+                <source media="(min-width: 601px)" srcset="/images/bg-1.jpg">
+                <img aria-hidden="true" decoding="async" src="/images/bg-1.jpg" alt="new home" width="275" height="132">
              </picture>
         </section>
 
@@ -129,29 +129,29 @@
             <!-- Get Icons From flaticon.com -->
             <div class="card">
                 <picture>
-                    <img aria-hidden="true" decoding="async" src="/images/service1.svg" alt="appliance" width="48" height="48">
+                    <img aria-hidden="true" decoding="async" src="/images/gun-pistol.svg" alt="pistol" width="48" height="48">
                 </picture>
-                <h2>Service 1</h2>
+                <h2>Weapons Training</h2>
                 <p>
-                    Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.
+                    Small arms, rifles, and tactical maneuvering. We focus on safety first.
                 </p>
             </div>
             <div class="card">
                 <picture>
-                    <img aria-hidden="true" decoding="async" src="/images/service2.svg" alt="appliance" width="48" height="48">
+                    <img aria-hidden="true" decoding="async" src="/images/license.svg" alt="license" width="48" height="48">
                 </picture>
-                <h2>Service 2</h2>
+                <h2>Licensing</h2>
                 <p>
-                    Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.
+                    We provide training to obtain your CCW. Plan, prepare, practice.
                 </p>
             </div>
             <div class="card">
                 <picture>
-                    <img aria-hidden="true" decoding="async" src="/images/service3.svg" alt="appliance" width="48" height="48">
+                    <img aria-hidden="true" decoding="async" src="/images/flash.svg" alt="flash" width="48" height="48">
                 </picture>
-                <h2>Service 3</h2>
+                <h2>Blah blah blah</h2>
                 <p>
-                    Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.
+                    Here is another thing you guys do. I'm not sure lol.
                 </p>
             </div>
         </section>
@@ -163,12 +163,12 @@
         <section id="sidebyside" class="sidebyside">
             <div class="container">
                 <div class="content">
-                    <h2 class="title">Trusted home builders for (main city) for over 20 years</h2>
+                    <h2 class="title">Two veterans experienced in things will help you do things</h2>
                      <p>
                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam debitis dolor consectetur dolorem inventore modi tenetur ex odit, amet beatae ad, doloribus tempora quae ab nulla minus temporibus at veritatis!
                      </p>
                      <p>
-                         <strong>A list if you need it:</strong>
+                         <strong>Our combined experience, or something else here:</strong>
                       </p>
                      <ul>
                         <li>
@@ -198,9 +198,9 @@
                      <a class="button-solid" href="/about.html">More About Us</a>
                 </div>
                 <picture class="image-box">
-                     <source media="(max-width: 600px)" srcset="/images/cabinets2-m.jpg">
-                     <source media="(min-width: 601px)" srcset="/images/cabinets2.jpg">
-                     <img aria-hidden="true" loading="lazy" decoding="async" src="/images/cabinets2.jpg" alt="cabinets" width="400" height="662">
+                     <source media="(max-width: 600px)" srcset="/images/bg-2.jpg">
+                     <source media="(min-width: 601px)" srcset="/images/bg-2.jpg">
+                     <img aria-hidden="true" loading="lazy" decoding="async" src="/images/bg-2.jpg" alt="guy aiming rifle" width="400" height="662">
                  </picture>
             </div>
        </section>
@@ -244,12 +244,12 @@
                      <p>
                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium saepe laborum nam consequuntur porro inventore odio? Quod autem alias ratione cum reiciendis qui quaerat, sequi voluptatum voluptatibus, iusto itaque sed ullam. Quis, maiores corrupti. Rerum quo laudantium vero magnam tempora!
                      </p>
-                     <a class="button-solid" href="/contact.html">Get Free Quote</a>
+                     <a class="button-solid" href="/contact.html">Contact Us</a>
                 </div>
                 <picture class="image-box">
-                     <source media="(max-width: 600px)" srcset="/images/cabinets2-m.jpg">
-                     <source media="(min-width: 601px)" srcset="/images/cabinets2.jpg">
-                     <img aria-hidden="true" loading="lazy" decoding="async" src="/images/cabinets2.jpg" alt="cabinets" width="400" height="662">
+                     <source media="(max-width: 600px)" srcset="/images/bg-4.jpg">
+                     <source media="(min-width: 601px)" srcset="/images/bg-4.jpg">
+                     <img aria-hidden="true" loading="lazy" decoding="async" src="/images/bg-4.jpg" alt="military guy with rifle" width="400" height="662">
                  </picture>
             </div>
        </section>
@@ -262,14 +262,14 @@
             <div class="container">
                 <h2 class="title">Get It Done <br> With Us Today</h2>
                 <p>
-                    Say something catchy, informative, and encouraging to click the button to go to the contact page.  I like to add these to the bottom of all pages.
+                    Say something catchy, informative, and encouraging to click the button to go to the schedule page. This is where you convert a sale.
                 </p>
-                <a href="/contact.html" class="button-solid">Get an Estimate Now</a>
+                <a href="/schedule.html" class="button-solid">Schedule Training Now</a>
             </div>
             <picture>
-                <source media="(max-width: 600px)" srcset="/images/cabinets2-m.webp">
-                <source media="(min-width: 601px)" srcset="/images/cabinets2.jpg">
-                <img aria-hidden="true" loading="lazy" decoding="async" src="/images/cabinets2.jpg" alt="kitchen cabinets" width="1920" height="1280">
+                <source media="(max-width: 600px)" srcset="/images/bg-3.webp">
+                <source media="(min-width: 601px)" srcset="/images/bg-3.jpg">
+                <img aria-hidden="true" loading="lazy" decoding="async" src="/images/bg-3.jpg" alt="military guy with rifle" width="1920" height="1280">
              </picture>
         </section>
     </main>
@@ -281,10 +281,7 @@
     <footer id="footer">
         <div class="container">
             <div class="left-section">
-                <a class="logo" href="/index.html"><img loading="lazy" decoding="async" src="/images/logo-light.png" alt="logo" width="264" height="78"></a>
-                <p>
-                    Extra content if you need it, if not you can delete this whole p tag. I usually do.
-                </p>
+                <a class="logo" href="/index.html"><img loading="lazy" decoding="async" src="/images/logo.png" alt="logo" ></a>
             </div>
             <div class="right-section">
                 <div class="lists">
@@ -292,20 +289,19 @@
                         <li><h2>Information</h2></li>
                         <li><a href="/index.html">Home</a></li>
                         <li><a href="/about.html">About Us</a></li>
-                        <li><a href="/projects.html">Projects</a></li>
-                        <li><a href="/testimonials.html">Reviews</a></li>
+                        <li><a href="/schedule.html">Schedule</a></li>
+                        <li><a href="/photos.html">Photos</a></li>
                         <li><a href="/contact.html">Contact</a></li>
                     </ul>
                     <ul>
                         <li><h2>Services</h2></li>
-                        <li>Service1</li>
-                        <li>Service2</li>
-                        <li>Service4</li>
-                        <li>Service5</li>
+                        <li>Training</li>
+                        <li>Licensing</li>
+                        <li>Consulting</li>
                     </ul>
                     <ul>
                         <li><h2>Contact</h2></li>
-                        <li><a href="/contact.html">First Address Line<br>Denver CO 80206</a></li>
+                        <li><a href="/contact.html">First Address Line<br>Raleigh NC 77777</a></li>
                         <li><a href="tel:555-779-4407">T: (555) 779-4407</a></li>
                         <li><a href="mailto:email@email.com">Click to Email</a></li>
                     </ul>
@@ -314,9 +310,9 @@
         </div>
 
         <div class="credit">
-            <span>Designed and Hand Coded by</span>
-            <a href="" target="_blank" rel="noopener">Your Company Name</a>
-            <span class="copyright"> Copyright 2021 - Present</span></div>
+            <span>Designed by</span>
+            <a href="https://www.asteriawebdesign.com" target="_blank" rel="noopener">Asteria Web Design</a>
+            <span class="copyright"> Copyright 2023 - Present</span></div>
     </footer>
 
 
